# lab04

./: CMakeLists.txt  README.md
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake
_build/solver_application/: Makefile  cmake_install.cmake  solver
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt  CMakeLists.txt.bak
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
